--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<title>dl-site</title>
 	</header>
 	<body>
-		<form action="http://s3.amazonaws.com/dl-site" method="post" enctype="multipart/form-data">
+		<form action="http://dl-site.s3-website-us-west-2.amazonaws.com/" method="post" enctype="multipart/form-data">
 			<input type="text" name="key" value="testfile.txt" />
 			<input type="text" name="acl" value="public-read" />
 			<input type="text" name="content-type" value="text/plain" />
