--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<body>
 		<form action="https://dl-site.s3.amazonaws.com" method="post" enctype="multipart/form-data">
 			<input type="text" name="key" value="testfile.txt" />
-			<input type="text" name="acl" value="" />
+			<input type="text" name="acl" value="public-read-write" />
 			<input type="text" name="content-type" value="text/image" />
-			<input type="hidden" name="AWSAccessKeyId" value="AKIAIN3RPWYOKM2EJ4LQ" />
+			<input type="hidden" name="AWSAccessKeyId" value="AKIAIJP5XMCE2JS3PPAQ" />
 			<input type="hidden" name="policy" value="eyAiZXhwaXJhdGlvbiI6ICIyMDE5LTEyLTMwVDEyOjAwOjAwLjAwMFoiLAogICJjb25kaXRpb25zIjogWwogICAgeyJidWNrZXQiOiAiZGwtc2l0ZSJ9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQtd3JpdGUifSwKICAgIFsic3RhcnRzLXdpdGgiLCAiJENvbnRlbnQtVHlwZSIsICJpbWFnZS8iXSwKICBdCn0=" />
-			<input type="hidden" name="signature" value="+yaJFc533vUJBFZmfvGZZmBD+ok=" />
+			<input type="hidden" name="signature" value="3Z169jZ/ftHNHGkNIJAF3S8C3CI=" />
 			<input name="file" type="file" />
 			<input name="submit" value="Upload" type="submit" />
 		</form>
