--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 		<title>dl-site</title>
 	</header>
 	<body>
-		<form action="https://dl-site.s3.amazonaws.com" method="post" enctype="multipart/form-data">
-			<input type="text" name="key" value="testfile.txt" />
-			<input type="text" name="acl" value="public-read-write" />
-			<input type="text" name="content-type" value="text/image" />
-			<input type="hidden" name="AWSAccessKeyId" value="AKIAIJP5XMCE2JS3PPAQ" />
-			<input type="hidden" name="policy" value="eyAiZXhwaXJhdGlvbiI6ICIyMDE5LTEyLTMwVDEyOjAwOjAwLjAwMFoiLAogICJjb25kaXRpb25zIjogWwogICAgeyJidWNrZXQiOiAiZGwtc2l0ZSJ9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQtd3JpdGUifSwKICAgIFsic3RhcnRzLXdpdGgiLCAiJENvbnRlbnQtVHlwZSIsICJpbWFnZS8iXSwKICBdCn0=" />
-			<input type="hidden" name="signature" value="3Z169jZ/ftHNHGkNIJAF3S8C3CI=" />
-			<input name="file" type="file" />
-			<input name="submit" value="Upload" type="submit" />
-		</form>
+		<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+</head>
+<body>
+	<form action="http://s3.amazonaws.com/%3Cbucketname%3E/" method="post" enctype="multipart/form-data">
+		<input type="text" name="key" value="testfile.txt" />
+		<input type="text" name="acl" value="public-read" />
+		<input type="text" name="content-type" value="image/png" />
+		<input type="hidden" name="AWSAccessKeyId" value="AKIAIJP5XMCE2JS3PPAQ" />
+		<input type="hidden" name="policy" value="ewogICJleHBpcmF0aW9uIjogIjIwMTktMDEtMDFUMTI6MDA6MDAuMDAwWiIsCiAgImNvbmRpdGlvbnMiOiBbCiAgICB7ImJ1Y2tldCI6ICJkbC1zaXRlIiB9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQiIH0sCiAgICBbInN0YXJ0cy13aXRoIiwgIiRLZXkiLCAiL3Bob3Rvcy8iXSwgCiAgICBbInN0YXJ0cy13aXRoIiwgIiRDb250ZW50LVR5cGUiLCAiaW1hZ2UvIl0sCiAgXQp9Cg==" />
+		<input type="hidden" name="signature" value="cOp60p/pfLpaR0n+0AMuLxOY8zk=" />
+		<input name="file" type="file" />
+		<input name="submit" value="Upload" type="submit" />
+	</form>
+</body>
+</html>
 	</body>
 </html>
