i think it works

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	</head>
 	<body>
-		<form action="https://dl-site.s3.amazonaws.com" method="post" enctype="multipart/form-data">
-			<input type="text" name="key" value="testfile.txt" />
+		<form action="https://dl-site.s3.amazonaws.com/" method="post" enctype="multipart/form-data">
+			<input type="text" name="key" value="/photos/${filename}" />
 			<input type="text" name="acl" value="public-read" />
 			<input type="text" name="content-type" value="image/" />
 			<input type="hidden" name="AWSAccessKeyId" value="AKIAIJP5XMCE2JS3PPAQ" />
-			<input type="hidden" name="policy" value="ewogICJleHBpcmF0aW9uIjogIjIwMTktMDEtMDFUMTI6MDA6MDAuMDAwWiIsCiAgImNvbmRpdGlvbnMiOiBbCiAgICB7ImJ1Y2tldCI6ICJkbC1zaXRlIiB9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQiIH0sCiAgICBbInN0YXJ0cy13aXRoIiwgIiRLZXkiLCAiL3Bob3Rvcy8iXSwgCiAgICBbInN0YXJ0cy13aXRoIiwgIiRDb250ZW50LVR5cGUiLCAiaW1hZ2UvIl0sCiAgXQp9Cg==" />
-			<input type="hidden" name="signature" value="cOp60p/pfLpaR0n+0AMuLxOY8zk=" />
+			<input type="hidden" name="policy" value="ewogICJleHBpcmF0aW9uIjogIjIwMTktMDEtMDFUMTI6MDA6MDAuMDAwWiIsCiAgImNvbmRpdGlvbnMiOiBbCiAgICB7ImJ1Y2tldCI6ICJkbC1zaXRlIiB9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQiIH0sCiAgICBbInN0YXJ0cy13aXRoIiwgIiRrZXkiLCAiL3Bob3Rvcy8iXSwgCiAgICBbInN0YXJ0cy13aXRoIiwgIiRDb250ZW50LVR5cGUiLCAiaW1hZ2UvIl0sCiAgXQp9Cg==" />
+			<input type="hidden" name="signature" value="d2NBPHll5GsSubJNympibklL8sc=" />
 			<input name="file" type="file" />
 			<input name="submit" value="Upload" type="submit" />
-		</form>
+</form>
 	</body>
 </html>
