--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<body>
 		<form action="https://dl-site.s3.amazonaws.com/" method="post" enctype="multipart/form-data">
 			<input type="hidden" name="key" value="photos/${filename}" />
-			<input type="hidden" name="acl" value="public-read" />
+			<input type="hidden" name="acl" value="private" />
 			<input type="hidden" name="content-type" value="image/png" />
 			<input type="hidden" name="AWSAccessKeyId" value="AKIAIJP5XMCE2JS3PPAQ" />
-			<input type="hidden" name="policy" value="ewogICJleHBpcmF0aW9uIjogIjIwMTktMDEtMDFUMTI6MDA6MDAuMDAwWiIsCiAgImNvbmRpdGlvbnMiOiBbCiAgICB7ImJ1Y2tldCI6ICJkbC1zaXRlIiB9LAogICAgeyJhY2wiOiAicHVibGljLXJlYWQiIH0sCiAgICBbInN0YXJ0cy13aXRoIiwgIiRrZXkiLCAicGhvdG9zLyJdLCAKICAgIFsic3RhcnRzLXdpdGgiLCAiJENvbnRlbnQtVHlwZSIsICJpbWFnZS8iXSwKICBdCn0K" />
+			<input type="hidden" name="policy" value="ewogICJleHBpcmF0aW9uIjogIjIwMTktMDEtMDFUMTI6MDA6MDAuMDAwWiIsCiAgImNvbmRpdGlvbnMiOiBbCiAgICB7ImJ1Y2tldCI6ICJkbC1zaXRlIiB9LAogICAgeyJhY2wiOiAicHJpdmF0ZSIgfSwKICAgIFsic3RhcnRzLXdpdGgiLCAiJGtleSIsICJwaG90b3MvIl0sIAogICAgWyJzdGFydHMtd2l0aCIsICIkQ29udGVudC1UeXBlIiwgImltYWdlLyJdLAogIF0KfQo=" />
 			<input type="hidden" name="signature" value="gWaO9uwqcSjhq88s2IrZhuJBKok=" />
 			<input name="file" type="file" />
 			<input name="submit" value="Upload" type="submit" />
